C3 version history
--------------------------------

Version 6.1.2 (07.01.2022)
- UPDATED: Manual
- FIXED: Buttons get disabled correctly for anyone but the two commanders
- FIXED: Error in Invasion Pane Controller, missing next storyId

Version 6.1.1 (03.01.2022)
- UPDATED: Several libs

Version 6.1.0 (30.12.2021)
- UPDATED: NSIS 3.08
- UPDATED: Several libs
- CHANGED: jumpship icons to reflect faction (by color), facing all from left to right now

Version 6.0.7 (20.12.2021)
- FIXED: Confirmation display of chosen winner of the other faction
- CHANGED: Removed beep sound for every clipboard scan

Version 6.0.6 (18.12.2021)
- FIXED: Confirmation in invasion steps
- FIXED: Storing of invasion results

Version 6.0.5 (17.12.2021)
- ADDED: Visualization of clipboard checking (for MWO results)
- FIXED: Further changes to log window

Version 6.0.4 (17.12.2021)
- FIXED: Log window reworked

Version 6.0.3 (15.12.2021)
- ADDED: Requesting match results from MWO API (key is taken from clipboard)
- CHANGED: Working pickup of Game-ID from clipboard and downloading game info object
- CHANGED: Changed all the logging to SLF4J (major refactory)
- CHANGED: Cleaned and sorted all pom.xml files

Version 6.0.2 (14.12.2021)
- FIXED: hikari connection pool server is working again
- CHANGED: Disabled JNDI in spring on server
- CHANGED: Disabled log4j in client
- CHANGED: Updated a number of libraries

Version 6.0.0 (13.12.2021)
- ADDED: API call for MWO lobby API game stats
- FIXED: Security issue in ircBot
- CHANGED: Update ircBot log4j due to security issue
- CHANGED: Update server log4j due to security issue
- CHANGED: Updated different libraries to their latest versions
- CHANGED: Added fade in animation to scores in invasion pane

Version 5.9.7 (12.12.2021)
- CHANGED: Invasion pane changes (confirmation)
- CHANGED: On startup the client will open login pane automatically

Version 5.9.6 (11.12.2021)
- ADDED: Confirmation workflow in lobby

Version 5.9.5 (09.12.2021)